# deep-research-agent

./: Makefile  README.md  langgraph.json  pyproject.toml
backend/: .gitignore  .python-version  README.md  langgraph.json  pyproject.toml
backend/evals/: scoping_eval.ipynb
backend/src/: api_routes.py  app.py  auth.py  database.py  full_agent.py  multi_agent_supervisor.py  multi_agent_supervisor_state.py  pdf_vector_store_manager.py  research_agent.py  research_agent_mcp.py  research_states.py  scoping_agent.py  scoping_states.py  simple_chat.py  test.py  utils.py
evals/: scoping_eval.ipynb
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: ChatApp.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatSidebar.tsx  MessageList.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: LoginPage.tsx  RegisterPage.tsx  WelcomePage.tsx
frontend/src/types/: chat.ts
src/: multi_agent_supervisor.py  research_agent.py  research_states.py  scoping_agent.py  scoping_states.py  utils.py
