[project]
name = "deep-research"
version = "0.1.0"
description = "deep research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "langgraph-cli>=0.3.8",
]
