[project]
name = "deep-research"
version = "0.1.0"
description = "deep research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.6",
    "langgraph-cli>=0.3.8",
    "rich>=14.1.0",
    "tavily-python>=0.7.11",
]
