[project]
name = "deep-research"
version = "0.1.0"
description = "deep research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "bcrypt>=5.0.0",
    "chromadb>=1.1.1",
    "dotenv>=0.9.9",
    "fastapi>=0.118.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.1.9",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.6",
    "langgraph-cli>=0.3.8",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.7",
    "pypdf>=6.1.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "rich>=14.1.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.7.11",
]
